Enhance internationalization support by updating language handling in components, adding navigation buttons to the image slider, and cleaning up code formatting in various files.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -69,12 +69,12 @@
     "monthlynamaztitle": "Monthly Namaz Timings",
     "currentdate": "Current Date",
     "date":"Date",
-    "namazfajr":"فجر",
-    "sunrise":"شروق الشمس",
-    "namazdhuhr":"الظهر",
-    "namazasr":"عصر",
-    "namazmaghrib":"المغرب",
-    "namazisha":"إيشا",
+    "namazfajr":"Fajr",
+    "sunrise":"Sunrise",
+    "namazdhuhr":"Dhuhr",
+    "namazasr":"Asr",
+    "namazmaghrib":"Maghrib",
+    "namazisha":"Isha",
     "months": {
       "Jan": "January",
       "Feb": "February",
@@ -112,7 +112,7 @@
   },
   "Footer": {
     "footertitle": "Global Salah",
-    "footerdesc": "  Global Salah is a website dedicated to providing accurate and convenient Islamic prayer time information to Muslims around the world.",
+    "footerdesc": "Global Salah is a website dedicated to providing accurate and convenient Islamic prayer time information to Muslims around the world.",
     "quicklinkstitle": "Quick links",
     "companytitle": "Company",
     "otherlinktitle": "Other",
