Enhance internationalization by adding timezone selection to language files, updating layout for loading state, and improving image slider component with new icons and functionality.

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -63,7 +63,7 @@
         "monthly": "شهري",
         "monthlynamaztitle": "مواقيت الصلاة الشهرية",
         "currentdate": "التاريخ الحالي",
-        "date":"التاريخ",
+        "date": "التاريخ",
         "namazfajr": "فجر",
         "sunrise": "شروق الشمس",
         "namazdhuhr": "الظهر",
@@ -102,7 +102,7 @@
     "HijriDivider": {
         "dividertitle": "اعرف التاريخ والوقت الحاليين",
         "currenttime": "الوقت الحالي",
-        "hijrititle":"التاريخ الهجري",
+        "hijrititle": "التاريخ الهجري",
         "currentdate": "التاريخ الحالي"
     },
     "Footer": {
@@ -341,10 +341,10 @@
         "subparagraph_5": "اعتمد وتيرة الحياة الهادئة حيث تحدد البساطة والتوازن الحياة اليومية. من المناظر الطبيعية الخلابة إلى الشعور القوي بالمجتمع، استمتع بجو خالي من التوتر يشجع على الاسترخاء والتواصل والرفاهية."
     },
     "city": {
-        "school": "اختر مدرسة فكرية مختارة:",
-        "hanafi":"حنفي",
-        "shafi":"شافعي/مالكي/حنبلي",
-        "monthlytitle": "أوقات الصلاة الشهرية"
+        "school": "اختر مدرسة فكرية مختارة",
+        "hanafi": "حنفي",
+        "shafi": "شافعي/مالكي/حنبلي",
+        "monthlytitle": "أوقات الصلاة الشهرية",
+        "selecttimezone": "اختر المنطقة الزمنية"
     }
-    
 }
