--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -344,6 +344,8 @@
         "school": "اختر مدرسة فكرية مختارة",
         "hanafi": "حنفي",
         "shafi": "شافعي/مالكي/حنبلي",
+        "placeholdersearch":"ابحث عن المدن",
+        "cities":"المدن",
         "monthlytitle": "أوقات الصلاة الشهرية",
         "selecttimezone": "اختر المنطقة الزمنية"
     }
