Update contact email, improve country data storage key, and add thank you page with internationalization support

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -658,5 +658,13 @@
         "cities": "المدن",
         "monthlytitle": "أوقات الصلاة الشهرية",
         "selecttimezone": "اختر المنطقة الزمنية"
+    },
+    "thankyou":{
+      "badge-text":"شكراً لتواصلك معنا!",
+      "heading":"نحن نقدر رسالتك",
+      "paragraph": " نقدر لك تواصلك مع شركة صلاح العالمية. رسالتك مهمة بالنسبة لنا، وسنعاود الاتصال بك في أقرب وقت ممكن. في غضون ذلك، استكشف مواقيت الصلاة الدقيقة والتقويم الإسلامي والموارد المفيدة للبقاء على اتصال بإيمانك. جزاك الله خير!",
+      "sub-heading":"هل لديك أسئلة إضافية؟",
+      "sub-paragraph":"لا تتردد في إرسال بريد إلكتروني إلينا وسنرد عليك في أسرع وقت ممكن.",
+      "buttontext":"راسلنا على"
     }
 }
